@@ -8,4 +8,6 @@ module LogStash
   module Config; end
   module File; end
   module Web; end
+
+  SHUTDOWN = :shutdown
 end # module LogStash
